--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 16px;
+  background-color: #fafafa;
+}
+
 .gallery {
   display: flex;
   flex-wrap: wrap;
@@ -10,13 +19,11 @@
 }
 
 .gallery-item {
-  overflow: hidden;
   max-width: 360px;
   max-height: 200px;
 }
 
 .gallery-image {
-  object-fit: cover;
   width: 100%;
   height: 100%;
   display: block;
